--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             Web<span class="color-logo darker">Studio</span>
             </a>
             <ul class="items-nav list">
-                <li class="item-nav"><a href="./index.html" class="link-nav link-style">Студия</a></li>
+                <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
                 <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
                 <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
             </ul>
