--- a/index.html
+++ b/index.html
@@ -67,9 +67,12 @@
             <!--Чем мы занимаемся-->
                 <section class="section-work">
                     <h2 class="title-section">Чем мы занимаемся</h2>
-                    <a href="./index.html"><img src="images/img.webp" alt=""  width="370"></a>
-                    <a href="./index.html"><img src="images/img1.webp" alt="" width="370"></a>
-                    <a href="./index.html"><img src="images/img2.webp" alt="" width="370"></a>
+                    <div class="img-box">
+                        <a href="./index.html"><img src="images/img.webp" alt="" width="370"></a>
+                        <a href="./index.html"><img src="images/img1.webp" alt="" width="370"></a>
+                        <a href="./index.html"><img src="images/img2.webp" alt="" width="370"></a>
+                    </div>
+
                 </section>
                 <!--Наша команда-->
                 <section class="section-team">
