--- a/index.html
+++ b/index.html
@@ -17,20 +17,22 @@
 <body>
     <!--Шапка-->
     <header class="header-nav">
-        <nav>
-            <a href="./index.html" class="logo link-style"> 
-            Web<span class="color-logo darker">Studio</span>
-            </a>
-            <ul class="items-nav list">
-                <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
-                <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
-                <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
+        <div class="nav-box container">
+            <nav>
+                <a href="./index.html" class="logo link-style">
+                    Web<span class="color-logo darker">Studio</span>
+                </a>
+                <ul class="items-nav list">
+                    <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
+                    <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
+                    <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
+                </ul>
+            </nav>
+            <ul class="items-cont list">
+                <li><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
+                <li><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
             </ul>
-        </nav>
-        <ul class="items-cont list">
-            <li><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
-        </ul>
+        </div>
     </header>
         <main>
             <!--Герой-->
