--- a/index.html
+++ b/index.html
@@ -19,19 +19,25 @@
     <header class="header-nav">
         <div class="nav-box container">
             <nav>
-                <a href="./index.html" class="logo link-style">
-                    Web<span class="color-logo darker">Studio</span>
-                </a>
-                <ul class="items-nav list">
-                    <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
-                    <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
-                    <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
-                </ul>
+                <div class="box-nav-logo">
+                    <a href="./index.html" class="logo link-style">
+                        Web<span class="color-logo darker">Studio</span>
+                    </a>
+                </div>
+                <div class="box-nav-links">
+                    <ul class="items-nav list">
+                        <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
+                        <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
+                        <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
+                    </ul>
+                </div>
             </nav>
-            <ul class="items-cont list">
-                <li><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
-                <li><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
-            </ul>
+            <div class="box-items-cont">
+                <ul class="items-cont list">
+                    <li><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
+                    <li><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
+                </ul>
+            </div>
         </div>
     </header>
         <main>
