--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             </nav>
             <div class="box-items-cont">
                 <ul class="items-cont list">
-                    <li class="item-mail"><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
-                    <li><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
+                    <li class="item-cont"><a href="mailto:info@devstudio.com" class="link-mail link-style">info@devstudio.com</a></li>
+                    <li class="item-cont"><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
                 </ul>
             </div>
         </div>
