--- a/portfolio.html
+++ b/portfolio.html
@@ -44,81 +44,85 @@
     </header>
         <main>
             <section class="section-portfolio">
-                <h1 class="title-hidden">Портфолио</h1>
-                <!-- Фільтр -->
-                <ul class="filter-list list">
-                    <li><button type="button" class="button-filter">Все</button></li>
-                    <li><button type="button" class="button-filter">Веб-сайты</button></li>
-                    <li><button type="button" class="button-filter">Приложения</button></li>
-                    <li><button type="button" class="button-filter">Дизайн</button></li>
-                    <li><button type="button" class="button-filter">Маркетинг</button></li>
-                </ul>
-                <!-- список набору -->
-                <ul class="portfolio-list list">
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Технокряк</h2>
-                            <p class="description-list">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p1.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
-                            <p class="description-list">Дизайн</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p2.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Ресторан Seafood</h2>
-                            <p class="description-list">Приложение</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p3.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Проект Prime</h2>
-                            <p class="description-list">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p4.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Проект Boxes</h2>
-                            <p class="description-list">Приложение</p>
-                        </a>
-                    </li>
-                    <li>
-                            <a href="" class="link-style">
-                            <img src="./images/img_p5.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Inspiration has no Borders</h2>
-                            <p class="description-list">Веб-сайт</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p6.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Издание Limited Edition</h2>
-                            <p class="description-list">Дизайн</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p7.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Проект LAB</h2>
-                            <p class="description-list">Маркетинг</p>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="" class="link-style">
-                            <img src="./images/img_p8.webp" alt="" width="370">
-                            <h2 class="subtitle-list">Growing Business</h2>
-                            <p class="description-list">Приложение</p>
-                        </a>
-                    </li>
-                </ul>
+                <div class="container">
+                    <h1 class="title-hidden">Портфолио</h1>
+                    <!-- Фільтр -->
+                    <ul class="filter-list list">
+                        <li class="item-list"><button type="button" class="button-filter">Все</button></li>
+                        <li class="item-list"><button type="button" class="button-filter">Веб-сайты</button></li>
+                        <li class="item-list"><button type="button" class="button-filter">Приложения</button></li>
+                        <li class="item-list"><button type="button" class="button-filter">Дизайн</button></li>
+                        <li class="item-list"><button type="button" class="button-filter">Маркетинг</button></li>
+                    </ul>
+                    <!-- список набору -->
+                    <div class="box-portfolio">
+                        <ul class="portfolio-list list">
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Технокряк</h2>
+                                    <p class="description-list">Веб-сайт</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p1.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
+                                    <p class="description-list">Дизайн</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p2.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Ресторан Seafood</h2>
+                                    <p class="description-list">Приложение</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p3.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Проект Prime</h2>
+                                    <p class="description-list">Маркетинг</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p4.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Проект Boxes</h2>
+                                    <p class="description-list">Приложение</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p5.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Inspiration has no Borders</h2>
+                                    <p class="description-list">Веб-сайт</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p6.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Издание Limited Edition</h2>
+                                    <p class="description-list">Дизайн</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p7.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Проект LAB</h2>
+                                    <p class="description-list">Маркетинг</p>
+                                </a>
+                            </li>
+                            <li class="item-portfolio">
+                                <a href="" class="link-style">
+                                    <img src="./images/img_p8.webp" alt="" width="370">
+                                    <h2 class="subtitle-list">Growing Business</h2>
+                                    <p class="description-list">Приложение</p>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
             </section>
         </main>
                 <!--Футер-->
