--- a/portfolio.html
+++ b/portfolio.html
@@ -26,8 +26,8 @@
                 </div>
                 <div class="box-nav-links">
                     <ul class="items-nav list">
-                        <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
-                        <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
+                        <li class="item-nav"><a href="./index.html" class="link-nav link-style">Студия</a></li>
+                        <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style current">Портфолио</a></li>
                         <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
                     </ul>
                 </div>
