--- a/index.html
+++ b/index.html
@@ -119,16 +119,21 @@
         </main>
                 <!--Футер-->
         <footer class="footer">
-            <a href="./index.html" class="logo link-style"> 
-                Web<span class="color-logo lighter">Studio</span>
-            </a>
-            <address class="address">
-                <ul class="items-addr list">
-                    <li><span class="location">г. Киев, пр-т Леси Украинки, 26</span></li>
-                    <li><a href="mailto:info@devstudio.com" class="link-cont link-style">info@devstudio.com</a></li>
-                    <li><a href="tel:+380991111111" class="link-cont link-style">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="container">
+                <div class="box-footer-logo">
+                    <a href="./index.html" class="logo link-style">
+                        Web<span class="color-logo lighter">Studio</span>
+                    </a>
+                </div>
+                
+                <address class="address">
+                    <ul class="items-addr list">
+                        <li class="item-addr"><span class="location">г. Киев, пр-т Леси Украинки, 26</span></li>
+                        <li class="item-addr"><a href="mailto:info@devstudio.com" class="link-cont link-style">info@devstudio.com</a></li>
+                        <li class="item-addr"><a href="tel:+380991111111" class="link-cont link-style">+38 099 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </body>
 </html>
