--- a/portfolio.html
+++ b/portfolio.html
@@ -60,65 +60,84 @@
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Технокряк</h2>
-                                    <p class="description-list">Веб-сайт</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Технокряк</h2>
+                                        <p class="description-list">Веб-сайт</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p1.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
-                                    <p class="description-list">Дизайн</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
+                                        <p class="description-list">Дизайн</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p2.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Ресторан Seafood</h2>
-                                    <p class="description-list">Приложение</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Ресторан Seafood</h2>
+                                        <p class="description-list">Приложение</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p3.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Проект Prime</h2>
-                                    <p class="description-list">Маркетинг</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Проект Prime</h2>
+                                        <p class="description-list">Маркетинг</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p4.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Проект Boxes</h2>
-                                    <p class="description-list">Приложение</p>
+                                    
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Проект Boxes</h2>
+                                        <p class="description-list">Приложение</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p5.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Inspiration has no Borders</h2>
-                                    <p class="description-list">Веб-сайт</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Inspiration has no Borders</h2>
+                                        <p class="description-list">Веб-сайт</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p6.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Издание Limited Edition</h2>
-                                    <p class="description-list">Дизайн</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Издание Limited Edition</h2>
+                                        <p class="description-list">Дизайн</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p7.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Проект LAB</h2>
-                                    <p class="description-list">Маркетинг</p>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Проект LAB</h2>
+                                        <p class="description-list">Маркетинг</p>
+                                    </div>
                                 </a>
                             </li>
                             <li class="item-portfolio">
                                 <a href="" class="link-style">
                                     <img src="./images/img_p8.webp" alt="" width="370">
-                                    <h2 class="subtitle-list">Growing Business</h2>
-                                    <p class="description-list">Приложение</p>
-                                </a>
+                                    <div class="subtitle-content">
+                                        <h2 class="subtitle-list">Growing Business</h2>
+                                        <p class="description-list">Приложение</p>
+                                    </div>
+                                 </a>
                             </li>
                         </ul>
                     </div>
@@ -127,16 +146,23 @@
         </main>
                 <!--Футер-->
         <footer class="footer">
-            <a href="./index.html" class="logo link-style">
-                Web<span class="color-logo lighter">Studio</span>
-            </a>
-            <address class="address">
-                <ul class="items-addr list">
-                    <li><span class="location">г. Киев, пр-т Леси Украинки, 26</span></li>
-                    <li><a href="mailto:info@devstudio.com" class="link-cont link-style">info@devstudio.com</a></li>
-                    <li><a href="tel:+380991111111" class="link-cont link-style">+38 099 111 11 11</a></li>
-                </ul>
-            </address>
+            <div class="container">
+                <div class="box-footer-logo">
+                    <a href="./index.html" class="logo link-style">
+                        Web<span class="color-logo lighter">Studio</span>
+                    </a>
+                </div>
+        
+                <address class="address">
+                    <ul class="items-addr list">
+                        <li class="item-addr"><span class="location">г. Киев, пр-т Леси Украинки, 26</span></li>
+                        <li class="item-addr"><a href="mailto:info@devstudio.com"
+                                class="link-cont link-style">info@devstudio.com</a></li>
+                        <li class="item-addr"><a href="tel:+380991111111" class="link-cont link-style">+38 099 111 11 11</a>
+                        </li>
+                    </ul>
+                </address>
+            </div>
         </footer>
     </body>
 </html>
