--- a/portfolio.html
+++ b/portfolio.html
@@ -19,33 +19,26 @@
     <header class="header-nav">
         <div class="nav-box container">
             <nav>
-                <div class="box-nav-logo">
-                    <a href="./index.html" class="logo link-style">
-                        Web<span class="color-logo darker">Studio</span>
-                    </a>
-                </div>
-                <div class="box-nav-links">
-                    <ul class="items-nav list">
-                        <li class="item-nav"><a href="./index.html" class="link-nav link-style">Студия</a></li>
-                        <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style current">Портфолио</a></li>
-                        <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
-                    </ul>
-                </div>
-            </nav>
-            <div class="box-items-cont">
-                <ul class="items-cont list">
-                    <li class="item-cont"><a href="mailto:info@devstudio.com"
-                            class="link-mail link-style">info@devstudio.com</a></li>
-                    <li class="item-cont"><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a>
-                    </li>
+                <a href="./index.html" class="logo link-style">
+                    Web<span class="color-logo darker">Studio</span>
+                </a>
+                <ul class="items-nav list">
+                    <li class="item-nav"><a href="./index.html" class="link-nav link-style current">Студия</a></li>
+                    <li class="item-nav"><a href="./portfolio.html" class="link-nav link-style">Портфолио</a></li>
+                    <li class="item-nav"><a href="#" class="link-nav link-style">Контакты</a></li>
                 </ul>
-            </div>
+            </nav>
+            <ul class="items-cont list">
+                <li class="item-cont"><a href="mailto:info@devstudio.com"
+                        class="link-mail link-style">info@devstudio.com</a></li>
+                <li class="item-cont"><a href="tel:+380961111111" class="link-tel link-style">tel:+38 096 111 11 11</a></li>
+            </ul>
         </div>
     </header>
         <main>
             <section class="section-portfolio">
                 <div class="container">
-                    <h1 class="title-hidden">Портфолио</h1>
+                    <h1 class="visually-hidden">Портфолио</h1>
                     <!-- Фільтр -->
                     <ul class="filter-list list">
                         <li class="item-list"><button type="button" class="button-filter">Все</button></li>
@@ -55,92 +48,90 @@
                         <li class="item-list"><button type="button" class="button-filter">Маркетинг</button></li>
                     </ul>
                     <!-- список набору -->
-                    <div class="box-portfolio">
-                        <ul class="portfolio-list list">
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Технокряк</h2>
-                                        <p class="description-list">Веб-сайт</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p1.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
-                                        <p class="description-list">Дизайн</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p2.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Ресторан Seafood</h2>
-                                        <p class="description-list">Приложение</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p3.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Проект Prime</h2>
-                                        <p class="description-list">Маркетинг</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p4.webp" alt="" width="370">
-                                    
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Проект Boxes</h2>
-                                        <p class="description-list">Приложение</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p5.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Inspiration has no Borders</h2>
-                                        <p class="description-list">Веб-сайт</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p6.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Издание Limited Edition</h2>
-                                        <p class="description-list">Дизайн</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p7.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Проект LAB</h2>
-                                        <p class="description-list">Маркетинг</p>
-                                    </div>
-                                </a>
-                            </li>
-                            <li class="item-portfolio">
-                                <a href="" class="link-style">
-                                    <img src="./images/img_p8.webp" alt="" width="370">
-                                    <div class="subtitle-content">
-                                        <h2 class="subtitle-list">Growing Business</h2>
-                                        <p class="description-list">Приложение</p>
-                                    </div>
-                                 </a>
-                            </li>
-                        </ul>
-                    </div>
+                    <ul class="portfolio-list list">
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Технокряк</h2>
+                                    <p class="description-list">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p1.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Постер New Orlean vs Golden Star</h2>
+                                    <p class="description-list">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p2.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Ресторан Seafood</h2>
+                                    <p class="description-list">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p3.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Проект Prime</h2>
+                                    <p class="description-list">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p4.webp" alt="" width="370">
+                    
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Проект Boxes</h2>
+                                    <p class="description-list">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p5.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Inspiration has no Borders</h2>
+                                    <p class="description-list">Веб-сайт</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p6.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Издание Limited Edition</h2>
+                                    <p class="description-list">Дизайн</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p7.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Проект LAB</h2>
+                                    <p class="description-list">Маркетинг</p>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="item-portfolio">
+                            <a href="" class="link-style">
+                                <img src="./images/img_p8.webp" alt="" width="370">
+                                <div class="subtitle-content">
+                                    <h2 class="subtitle-list">Growing Business</h2>
+                                    <p class="description-list">Приложение</p>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
                 </div>
             </section>
         </main>
